<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_clipboard"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_finance"
        android:icon="@drawable/ic_finance"
        android:title="@string/title_finance" />

    <item
        android:id="@+id/navigation_homes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_user" />

</menu>
